[lworld] C2 compilation fails with assert "array can't be flattened"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      applications/ctw/modules/java_base.java fails since the recent merge with mainline:

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (workspace/open/src/hotspot/share/opto/parse2.cpp:95), pid=608028, tid=608042
      # assert((EnablePrimitiveClasses && (FlatArrayElementMaxSize != 0)) && is_reference_type(bt) && elemptr->can_be_inline_type() && !ary_t->klass_is_exact() && !ary_t->is_not_null_free() && (!elemptr->is_inlinetypeptr() || elemptr->inline_klass()->flatten_array())) failed: array can't be flattened
      #

      Current CompileTask:
      C2: 140310 20664 b 4 java.lang.ScopedValue::get (63 bytes)

      Stack: [0x00007f35184aa000,0x00007f35185ab000], sp=0x00007f35185a7700, free space=1013k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x153a044] Parse::array_load(BasicType)+0x3c4 (parse2.cpp:95)
      V [libjvm.so+0x1546db9] Parse::do_one_bytecode()+0xc19 (parse2.cpp:2870)
      V [libjvm.so+0x1530a12] Parse::do_one_block()+0x522 (parse1.cpp:1649)
      V [libjvm.so+0x15318d0] Parse::do_all_blocks()+0x130 (parse1.cpp:741)
      V [libjvm.so+0x1536575] Parse::Parse(JVMState*, ciMethod*, float)+0xf95 (parse1.cpp:645)
      V [libjvm.so+0x877748] ParseGenerator::generate(JVMState*)+0x168 (callGenerator.cpp:100)
      V [libjvm.so+0xa29636] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1716 (compile.cpp:782)
      V [libjvm.so+0x87551b] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x3eb (c2compiler.cpp:118)
      V [libjvm.so+0xa35520] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa00 (compileBroker.cpp:2265)
      V [libjvm.so+0xa36388] CompileBroker::compiler_thread_loop()+0x5f8 (compileBroker.cpp:1944)
      V [libjvm.so+0xef61ac] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:720)
      V [libjvm.so+0x17f795a] Thread::call_run()+0xba (thread.cpp:217)
      V [libjvm.so+0x14e096c] thread_native_entry(Thread*)+0x11c (os_linux.cpp:778)

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: