8310034: [lworld] C2 compilation fails with assert "array can't be flattened"